gitops/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-bank-prod
  labels:
    app.kubernetes.io/name: vault-bank
    app.kubernetes.io/part-of: vault-bank
    application: vault-bank
    environment: production
