gitops/overlays/production/shared-runtime-aliases.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: vault-bank-prod
  labels:
    app.kubernetes.io/part-of: vault-bank
    environment: production
spec:
  type: ExternalName
  externalName: postgres.vault-bank-staging.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vault-bank-prod
  labels:
    app.kubernetes.io/part-of: vault-bank
    environment: production
spec:
  type: ExternalName
  externalName: redis.vault-bank-staging.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: vault-bank-prod
  labels:
    app.kubernetes.io/part-of: vault-bank
    environment: production
spec:
  type: ExternalName
  externalName: rabbitmq.vault-bank-staging.svc.cluster.local
