gitops/overlays/production/allow-shared-runtime-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-shared-runtime-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:

    # Kubernetes DNS / CoreDNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # HashiCorp Vault
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vault
      ports:
        - protocol: TCP
          port: 8200

    # Shared staging runtime
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vault-bank-staging
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5672

    # Production microservice-to-microservice traffic
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vault-bank-prod
